fix width issues in mod2b textzone on small screens (close #88)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -297,7 +297,7 @@ body{
 }
 .text p{
 	display:block;
-	width:90%;
+	width:95%;
 	margin:0 auto;
 	color:#333;
 	margin-bottom:15px;
@@ -768,18 +768,19 @@ h4 a{
 }
 .text-container .orat-info{
 	float:left;
-    width: 90%;
+    width: 82%;
 }
 .text-container .orat-info p{
-    margin:0;
+    margin:1px;
+    font-size: 0.9em;
 }
 .text-container .orat-count{
-    width: 9%;
+    width: 15%;
 	float: left;
-    text-align: right;
-    padding-right: 8px;
+    text-align: center;
     padding-top: 2px;
     font-size: 0.75em;
+    margin-right: 3%
 }
 .orateur{
 	display:block;
